--- a/css/styles.css
+++ b/css/styles.css
@@ -146,11 +146,13 @@ nav h1 a {
 }
 
 /* ====================== Restaurant Filtering ====================== */
+
 .filter-options {
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: 25px 50px;
+  display: grid;
+  grid-column: 1 fr;
+  justify-items: center;
   width: 100%;
-  height: 50px;
+  height: 125px;
   background-color: #3397DB;
   align-items: center;
 }
@@ -161,6 +163,7 @@ nav h1 a {
   font-weight: normal;
   line-height: 1;
   margin: 0 20px;
+  padding: 3px;
 }
 
 .filter-options select {
@@ -178,6 +181,9 @@ nav h1 a {
 /* ====================== Restaurant Listing ====================== */
 
 #restaurants-list {
+  display: grid;
+  grid-template-columns:1fr;
+  justify-items: center;
   background-color: #f3f3f3;
   list-style: outside none none;
   margin: 0;
@@ -186,7 +192,6 @@ nav h1 a {
 }
 
 #restaurants-list li {
-  
   background-color: #fff;
   border: 2px solid #ccc;
   font-family: Arial, sans-serif;
