--- a/css/styles-sm.css
+++ b/css/styles-sm.css
@@ -1,10 +1,12 @@
 
 
 .filter-options {
-
+grid-template-columns:1fr 1fr 1fr;
+height: 50px;
 }
+
+
 
 #restaurants-list {
   grid-template-columns: 1fr 1fr;
-
 }
