--- a/css/styles.css
+++ b/css/styles.css
@@ -149,7 +149,7 @@ nav h1 a {
 
 .filter-options {
   display: grid;
-  grid-column: 1 fr;
+  grid-template-columns:1fr;
   justify-items: center;
   width: 100%;
   height: 125px;
@@ -187,7 +187,7 @@ nav h1 a {
   background-color: #f3f3f3;
   list-style: outside none none;
   margin: 0;
-  padding: 30px 15px 60px;
+  padding: 30px 0px 60px;
   text-align: center;
 }
 
