--- a/css/styles-sm.css
+++ b/css/styles-sm.css
@@ -7,4 +7,7 @@ height: 50px;
 
 #restaurants-list {
   grid-template-columns: 1fr 1fr;
+  /* max-width: 800px;
+   margin-left: auto;
+   margin-right: auto;*/
 }
