--- a/css/styles.css
+++ b/css/styles.css
@@ -148,11 +148,8 @@ nav h1 a {
 /* ====================== Restaurant Filtering ====================== */
 
 .filter-options {
-  display: grid;
-  grid-template-columns: 1fr;
-  justify-items: center;
   width: 100%;
-  height: 125px;
+  height: 50px;
   background-color: #3397DB;
   align-items: center;
 }
@@ -163,7 +160,6 @@ nav h1 a {
   font-weight: normal;
   line-height: 1;
   margin: 0 20px;
-  padding: 3px;
 }
 
 .filter-options select {
@@ -181,13 +177,10 @@ nav h1 a {
 /* ====================== Restaurant Listing ====================== */
 
 #restaurants-list {
-  display: grid;
-  grid-template-columns: 1fr;
-  justify-items: center;
   background-color: #f3f3f3;
   list-style: outside none none;
   margin: 0;
-  padding: 30px 0px 60px;
+  padding: 30px 15px 60px;
   text-align: center;
 }
 
@@ -208,7 +201,7 @@ nav h1 a {
   margin: 0;
   max-width: 100%;
   min-height: 248px;
-  width: 100%;
+  min-width: 100%;
 }
 
 #restaurants-list li h1 {
