--- a/css/styles.css
+++ b/css/styles.css
@@ -61,7 +61,7 @@ hgroup,
 menu,
 nav,
 section {
-  display: block;
+  display: grid;
 }
 
 #maincontent {
@@ -103,10 +103,9 @@ nav h1 a {
 #breadcrumb {
   padding: 10px 40px 16px;
   list-style: none;
-  background-color: #eee;
+  background-color: rgba(252, 216, 98, 0.849);
   font-size: 17px;
   margin: 0;
-  width: 100%;
 }
 
 /* Display list items side by side */
@@ -148,8 +147,12 @@ nav h1 a {
 /* ====================== Restaurant Filtering ====================== */
 
 .filter-options {
+  display: grid;
+  grid-template-columns:1fr;
+  grid-template-rows: repeat(3, 1fr);
+  justify-items: center;
+  height: 125px;
   width: 100%;
-  height: 50px;
   background-color: #3397DB;
   align-items: center;
 }
@@ -177,6 +180,9 @@ nav h1 a {
 /* ====================== Restaurant Listing ====================== */
 
 #restaurants-list {
+  display: grid;
+  grid-template-columns:1fr;
+  justify-items: center;
   background-color: #f3f3f3;
   list-style: outside none none;
   margin: 0;
@@ -256,7 +262,7 @@ width: 100%;
 .inside #footer {
   bottom: 0;
   position: absolute;
-  max-width: 100%;
+  width: 100%;
 }
 
 #restaurant-name {
