--- a/css/styles.css
+++ b/css/styles.css
@@ -198,7 +198,7 @@ nav h1 a {
   min-height: 380px;
   padding: 0 30px 25px;
   text-align: left;
-  width: 270px;
+  min-width: 270px;
 }
 
 #restaurants-list .restaurant-img {
