--- a/css/styles.css
+++ b/css/styles.css
@@ -139,7 +139,8 @@ nav h1 a {
 /* ====================== Map ====================== */
 
 #map {
-  height: 400px;
+  min-height: 50vh;
+  max-height: 100vh;
   width: 100%;
   background-color: #ccc;
 }
@@ -148,7 +149,7 @@ nav h1 a {
 
 .filter-options {
   display: grid;
-  grid-template-columns:1fr;
+  grid-template-columns: 1fr;
   grid-template-rows: repeat(3, 1fr);
   justify-items: center;
   height: 125px;
@@ -181,7 +182,7 @@ nav h1 a {
 
 #restaurants-list {
   display: grid;
-  grid-template-columns:1fr;
+  grid-template-columns: 1fr;
   justify-items: center;
   background-color: #f3f3f3;
   list-style: outside none none;
@@ -248,9 +249,9 @@ nav h1 a {
 }
 
 .inside #map-container {
-height: 400px;
-right: 0;
-width: 100%;
+  height: 400px;
+  right: 0;
+  width: 100%;
 }
 
 .inside #map {
@@ -302,7 +303,7 @@ width: 100%;
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
   padding: 14px 0px 30px 0px;
- text-align: center;
+  text-align: center;
 }
 
 #reviews-container {
