footer align-content: end;

--- a/css/styles.css
+++ b/css/styles.css
@@ -67,6 +67,7 @@ section {
 #maincontent {
   background-color: #f3f3f3;
   min-height: 100%;
+  width: 100%;
 }
 
 #footer {
@@ -77,6 +78,7 @@ section {
   padding: 25px;
   text-align: center;
   text-transform: uppercase;
+   align-content: end;
 }
 
 /* ====================== Navigation ====================== */
