--- a/css/styles.css
+++ b/css/styles.css
@@ -79,12 +79,13 @@ section {
   text-align: center;
   text-transform: uppercase;
    align-content: end;
+   width: 100vh;
 }
 
 /* ====================== Navigation ====================== */
 
 nav {
-  width: 100%;
+  width: 100vh;
   height: 80px;
   background-color: #252831;
   text-align: center;
@@ -143,7 +144,7 @@ nav h1 a {
 #map {
   min-height: 50vh;
   max-height: 100vh;
-  width: 100%;
+  width: 100vh;
   background-color: #ccc;
 }
 
@@ -155,7 +156,7 @@ nav h1 a {
   grid-template-rows: repeat(3, 1fr);
   justify-items: center;
   height: 125px;
-  width: 100%;
+  width: 100vh;
   background-color: #3397DB;
   align-items: center;
 }
