--- a/css/styles.css
+++ b/css/styles.css
@@ -78,14 +78,14 @@ section {
   padding: 25px;
   text-align: center;
   text-transform: uppercase;
-   align-content: end;
-   width: 100vh;
+  align-content: end;
+  width: 100%;
 }
 
 /* ====================== Navigation ====================== */
 
 nav {
-  width: 100vh;
+  width: 100%;
   height: 80px;
   background-color: #252831;
   text-align: center;
@@ -142,9 +142,8 @@ nav h1 a {
 /* ====================== Map ====================== */
 
 #map {
-  min-height: 50vh;
-  max-height: 100vh;
-  width: 100vh;
+   height: 400px;
+   width: 100%;
   background-color: #ccc;
 }
 
@@ -156,7 +155,7 @@ nav h1 a {
   grid-template-rows: repeat(3, 1fr);
   justify-items: center;
   height: 125px;
-  width: 100vh;
+  width: 100%;
   background-color: #3397DB;
   align-items: center;
 }
@@ -202,16 +201,15 @@ nav h1 a {
   min-height: 380px;
   padding: 0 30px 25px;
   text-align: left;
-  min-width: 270px;
+
 }
 
 #restaurants-list .restaurant-img {
   background-color: #ccc;
   display: block;
   margin: 0;
-  max-width: 100%;
   min-height: 248px;
-  min-width: 100%;
+  max-width: 100%;
 }
 
 #restaurants-list li h1 {
