--- a/css/styles-lg.css
+++ b/css/styles-lg.css
@@ -33,7 +33,7 @@
 #reviews-container {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
-  padding: 14px 40px opx 30px;
+  padding: 14px 40px 0px 30px;
   width: 50%;
 }
 
