--- a/css/styles.css
+++ b/css/styles.css
@@ -65,6 +65,9 @@ section {
 }
 
 #maincontent {
+  display: grid;
+  grid-template-columns:1fr;
+  grid-template-rows: 400px 1fr 1fr;
   background-color: #f3f3f3;
   min-height: 100%;
   width: 100%;
@@ -250,8 +253,10 @@ nav h1 a {
 }
 
 .inside #map-container {
+   grid-column: 1 / -1;
+   grid-row: 1 / 2;
+  background: blue none repeat scroll 0 0;
   height: 400px;
-  right: 0;
   width: 100%;
 }
 
@@ -306,8 +311,14 @@ nav h1 a {
   padding: 14px 0px 30px 0px;
   text-align: center;
 }
+#restaurant-container{
+ grid-column: 1 / -1;
+ grid-row: 2 / 3;
+}
 
 #reviews-container {
+   grid-column: 1 / -1;
+   grid-row: 3 / 4;
   padding: 30px 40px 80px;
 }
 
