main content fix

--- a/css/styles-lg.css
+++ b/css/styles-lg.css
@@ -1,3 +1,9 @@
+.inside #maincontent {
+ 
+  grid-template-rows: 0px 1fr 1fr;
+ 
+}
+
 #restaurants-list {
   max-width: 1100px;
   margin-left: auto;
