--- a/css/styles.css
+++ b/css/styles.css
@@ -66,7 +66,7 @@ section {
 
 #maincontent {
   display: grid;
-  grid-template-columns:1fr;
+  grid-template-columns: 1fr;
   grid-template-rows: 400px 1fr;
   justify-content: center;
   background-color: #f3f3f3;
@@ -146,8 +146,8 @@ nav h1 a {
 /* ====================== Map ====================== */
 
 #map {
-   height: 400px;
-   width: 100%;
+  height: 400px;
+  width: 100%;
   background-color: #ccc;
 }
 
@@ -189,11 +189,12 @@ nav h1 a {
 #restaurants-list {
   display: grid;
   grid-template-columns: 1fr;
+  grid-gap: 1em;
   justify-items: center;
   background-color: #f3f3f3;
   list-style: outside none none;
   margin: 0;
-  padding: 30px 15px 60px;
+  padding:0;
   text-align: center;
 }
 
@@ -205,7 +206,6 @@ nav h1 a {
   min-height: 380px;
   padding: 0 30px 25px;
   text-align: left;
-
 }
 
 #restaurants-list .restaurant-img {
@@ -214,7 +214,6 @@ nav h1 a {
   margin: 0;
   min-height: 248px;
   max-width: 100%;
-
 }
 
 #restaurants-list li h1 {
@@ -255,8 +254,8 @@ nav h1 a {
 }
 
 .inside #map-container {
-   grid-column: 1 / -1;
-   grid-row: 1 / 2;
+  grid-column: 1 / -1;
+  grid-row: 1 / 2;
   background: blue none repeat scroll 0 0;
   height: 400px;
   width: 100%;
@@ -313,14 +312,15 @@ nav h1 a {
   padding: 14px 0px 30px 0px;
   text-align: center;
 }
-#restaurant-container{
- grid-column: 1 / -1;
- grid-row: 2 / 3;
+
+#restaurant-container {
+  grid-column: 1 / -1;
+  grid-row: 2 / 3;
 }
 
 #reviews-container {
-   grid-column: 1 / -1;
-   grid-row: 3 / 4;
+  grid-column: 1 / -1;
+  grid-row: 3 / 4;
   padding: 30px 40px 80px;
 }
 
