--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,7 @@ li {
 }
 
 a {
-  color: orange;
+  color: rgb(255, 179, 0);
   text-decoration: none;
 }
 
@@ -76,7 +76,7 @@ section {
 
 #footer {
   background-color: #444;
-  color: #aaa;
+  color: rgb(253, 252, 252);
   font-size: 8pt;
   letter-spacing: 1px;
   padding: 25px;
@@ -158,10 +158,11 @@ nav h1 a {
   grid-template-columns: 1fr;
   grid-template-rows: repeat(3, 1fr);
   justify-items: center;
-  height: 125px;
+  height: 200px;
   width: 100%;
-  background-color: #3397DB;
+  background-color: rgb(0, 104, 173);
   align-items: center;
+  padding: 15px;
 }
 
 .filter-options h2 {
@@ -169,7 +170,7 @@ nav h1 a {
   font-size: 1rem;
   font-weight: normal;
   line-height: 1;
-  margin: 0 20px;
+  padding: 15px;
 }
 
 .filter-options select {
@@ -179,8 +180,6 @@ nav h1 a {
   font-size: 11pt;
   height: 35px;
   letter-spacing: 0;
-  margin: 10px;
-  padding: 0 10px;
   width: 200px;
 }
 
@@ -213,9 +212,9 @@ nav h1 a {
 }
 
 #restaurants-list li h1 {
-  color: #f18200;
+  color: #853500;
   font-family: Arial, sans-serif;
-  font-size: 14pt;
+  font-size: 18pt;
   font-weight: 200;
   letter-spacing: 0;
   line-height: 1.3;
@@ -229,7 +228,7 @@ nav h1 a {
 }
 
 #restaurants-list li a {
-  background-color: orange;
+  background-color: rgb(122, 80, 0);
   border-bottom: 3px solid #eee;
   color: #fff;
   display: inline-block;
