--- a/css/styles.css
+++ b/css/styles.css
@@ -269,7 +269,7 @@ nav h1 a {
 }
 
 #restaurant-name {
-  color: #f18200;
+  color: #5c3100;
   font-family: Arial, sans-serif;
   font-size: 20pt;
   font-weight: 200;
@@ -321,7 +321,7 @@ nav h1 a {
 }
 
 #reviews-container h2 {
-  color: #f58500;
+  color: #884b00;
   font-size: 24pt;
   font-weight: 300;
   letter-spacing: -1px;
