--- a/css/styles-md.css
+++ b/css/styles-md.css
@@ -1,3 +1,47 @@
 #restaurants-list {
 grid-template-columns: 1fr 1fr 1fr;
+  max-width: 1100px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.inside #maincontent {
+  grid-template-rows: 0px 1fr 1fr;
+}
+
+#breadcrumb {
+  padding: 10px 40px 16px;
+  list-style: none;
+  background-color: rgb(241, 198, 5);
+  font-size: 17px;
+  margin: 0;
+  width: calc(50% - 80px);
+}
+
+.inside #map-container {
+  background: blue none repeat scroll 0 0;
+  height: 83%;
+  position: fixed;
+  right: 0;
+  top: 80px;
+  bottom: 80px;
+  width: 50%;
+}
+
+.inside #map {
+  background-color: #ccc;
+  height: 100%;
+  width: 100%;
+}
+
+#restaurant-container,
+#reviews-container {
+  border-bottom: 1px solid #d9d9d9;
+  border-top: 1px solid #fff;
+  padding: 14px 40px 0px 30px;
+  width: 50%;
+}
+
+#reviews-container {
+  padding: 30px 40px 80px;
 }
