--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@ td,
 th,
 p {
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 10pt;
+  font-size: 1em;
   color: #333;
   line-height: 1.5;
 }
@@ -20,7 +20,7 @@ body {
 ul,
 li {
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 10pt;
+  font-size: 1em;
   color: #333;
 }
 
@@ -77,7 +77,7 @@ section {
 #footer {
   background-color: #444;
   color: rgb(253, 252, 252);
-  font-size: 8pt;
+  font-size: 1em;
   letter-spacing: 1px;
   padding: 25px;
   text-align: center;
@@ -101,7 +101,7 @@ nav h1 {
 
 nav h1 a {
   color: #fff;
-  font-size: 14pt;
+  font-size: 1.2em;
   font-weight: 200;
   letter-spacing: 10px;
   text-transform: uppercase;
@@ -177,7 +177,7 @@ nav h1 a {
   background-color: white;
   border: 1px solid #fff;
   font-family: Arial, sans-serif;
-  font-size: 11pt;
+  font-size: 1em;
   height: 35px;
   letter-spacing: 0;
   width: 200px;
@@ -214,7 +214,7 @@ nav h1 a {
 #restaurants-list li h1 {
   color: #853500;
   font-family: Arial, sans-serif;
-  font-size: 18pt;
+  font-size: 1.4em;
   font-weight: 200;
   letter-spacing: 0;
   line-height: 1.3;
@@ -224,7 +224,7 @@ nav h1 a {
 
 #restaurants-list p {
   margin: 0;
-  font-size: 11pt;
+  font-size: 1em;
 }
 
 #restaurants-list li a {
@@ -232,7 +232,7 @@ nav h1 a {
   border-bottom: 3px solid #eee;
   color: #fff;
   display: inline-block;
-  font-size: 10pt;
+  font-size: 1.2em;
   margin: 15px 0 0;
   padding: 8px 30px 10px;
   text-align: center;
@@ -271,7 +271,7 @@ nav h1 a {
 #restaurant-name {
   color: #5c3100;
   font-family: Arial, sans-serif;
-  font-size: 20pt;
+  font-size: 1.4em;
   font-weight: 200;
   letter-spacing: 0;
   margin: 15px 0 30px;
@@ -284,14 +284,14 @@ nav h1 a {
 }
 
 #restaurant-address {
-  font-size: 12pt;
+  font-size: 1em;
   margin: 10px 0px;
 }
 
 #restaurant-cuisine {
   background-color: #333;
   color: #ddd;
-  font-size: 12pt;
+  font-size: 1em;
   font-weight: 300;
   letter-spacing: 10px;
   margin: 0 0 20px;
@@ -322,7 +322,7 @@ nav h1 a {
 
 #reviews-container h2 {
   color: #884b00;
-  font-size: 24pt;
+  font-size: 2em;
   font-weight: 300;
   letter-spacing: -1px;
   padding-bottom: 1pt;
